feat: resolve #143 (#142)
